# Year3Sem1

./: .gitignore  README.md
LFTC/Labs/Lab1/: Lab1.docx  int main(){.txt  ~$Lab1.docx
LFTC/Labs/Lab1/Lab1/: main.cpp
LFTC/Labs/lab6/: Makefile  input_program  input_program.asm  input_program2  input_program2.asm  lex.yy.c  lexer.l  minicompiler  minilimbaj  parser.tab.c  parser.tab.h  parser.y
PDM/Android/app/: build.gradle.kts
PDM/Android/gradle/: libs.versions.toml
PPD/HW_1/: README.md
PPD/HW_1/C++/: CMakeLists.txt  DynamicMatrices.cpp  DynamicMatrices.h  StaticMatrices.cpp  StaticMatrices.h  main.cpp
PPD/HW_1/untitled/: N10M10000k5.txt  N10M10k3.txt  date.txt  outJ.csv  output_horizontal.txt  scriptJ.ps1
PPD/HW_2/: README.md
PPD/HW_2/C++/: CMakeLists.txt  DynamicMatrices.cpp  DynamicMatrices.h  N1000M1000k3.txt  N10M10k3.txt  convolution_results.csv  main.cpp  scriptC.ps1
PPD/HW_3/: README.md
PPD/HW_3/MPI_Var2/: CMakeLists.txt  main.cpp
PPD/HW_3/Mpi/: CMakeLists.txt  Numar1.txt  Numar1_4.txt  Numar2.txt  Numar3.txt  main.cpp
PPD/HW_3/Sequential/: CMakeLists.txt  Numar2.txt  Numar2_4.txt  main.cpp  num_100000.txt
PPD/HW_3/X/: CMakeLists.txt  main.cpp
PPD/HW_4/: README.md
PPD/HW_4/lab4/: Clasament_p16_pr1.txt  Clasament_p16_pr2.txt  Clasament_p4_pr2.txt  Clasament_p6_pr1.txt  Clasament_p6_pr2.txt  Clasament_p8_pr1.txt  Clasament_p8_pr2.txt  run_benchmark.py
PPD/HW_5/: readme.md
PPD/HW_5/lab5/: Clasament_pr2_pw12.txt  Clasament_pr2_pw2.txt  Clasament_pr2_pw4.txt  Clasament_pr4_pw12.txt  Clasament_pr4_pw2.txt  Clasament_pr4_pw4.txt  benchmark_results.json  run_benchmark.py
PPD/Lab2/: lab2InClass.txt
(+225 files in other folders)
